tests/baselines/reference/templateStringWithEmbeddedArrowFunctionES6(strict=true).errors.txt
templateStringWithEmbeddedArrowFunctionES6.ts(1,16): error TS7006: Parameter 'x' implicitly has an 'any' type.


==== templateStringWithEmbeddedArrowFunctionES6.ts (1 errors) ====
    var x = `abc${ x => x }def`;
                   ~
!!! error TS7006: Parameter 'x' implicitly has an 'any' type.